# OpenGLTutorial

./: .gitattributes  CMakeLists.txt
assets/shaders/: fragmentShader.glsl  vertexShader.glsl
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: CMakeLists.txt
libs/stb/include/stb/: stb_image.h
libs/stb/src/: stb_image.c
scripts/: submodules.bat
src/: main.cpp
src/Core/: OrthographicCamera.cpp  OrthographicCamera.h  ShaderProgram.cpp  ShaderProgram.h  Vertex.h  Viewport.cpp  Viewport.h
src/Utils/: File.cpp  File.h
